@startuml
abstract class User {
  # id: int
  # username: string
  # email: string
  # password: string
  # role: string
  + login()
  + logout()
}

class Reader {
}

class Author {
  + createArticle()
  + editArticle()
  + deleteArticle()
}

class Admin {
  + createCategory()
  + deleteCategory()
  + banUser()
}

class Article {
  - id: int
  - title: string
  - content: text
  - created_at: datetime
  - updated_at: datetime
}

class Comment {
  - id: int
  - content: text
  - created_at: datetime
}

class Category {
  - id: int
  - name: string
}

class Like {
  - id: int
  - user_id: int
  - article_id: int
}

User <|-- Reader
User <|-- Author
User <|-- Admin

User "1" -- "0..*" Comment : writes
User "1" -- "0..*" Like : makes
User "1" -- "0..*" Article : writes (Author)

Article "1" -- "0..*" Comment : has
Article "1" -- "0..*" Like : has
Article "*" -- "*" Category : belongs to

@enduml
